# hackathon

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  a.out  download.py  install.sh  log.txt  main  main.cpp  main.py  notworkingmain.py  requirements.txt  t.txt  test.c
data/: public_test.csv
llama-b9663/: libggml-base.so.0.15.1  libllama-common.so.0  libllama.so.0  libmtmd.so.0  libmtmd.so.0.0.9663  llama-bench  llama-cli  llama-debug-template-parser  llama-quantize  llama-server
